# strictly-pretty

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.shared.yaml  mkdocs.yaml
src/liblaf/strictly_pretty/: __init__.pyi  _constants.py  _core.py  _helpers.py  _public.py  _version.pyi
src/liblaf/strictly_pretty/_config/: __init__.pyi  _config.py  _fields.py
src/liblaf/strictly_pretty/_registry/: __init__.pyi  _builtins.py  _collections.py  _fieldz.py  _registry.py  _repr.py  _rich_repr.py
tests/: test_lindig.py
tests/prelude/: test_builtins.py
