#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "liblaf-strictly-pretty"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed"
]
dependencies = [
  "cytoolz>=1.1.0,<2.0.0",
  "environs>=14.6.0,<15.0.0",
  "fieldz>=0.2.0,<0.3.0",
  "lazy-loader>=0.5,<0.6",
  "rich>=14.3.3,<15.0.0",
  "toolz-stubs>=0.4.0,<0.5.0",
  "wadler-lindig>=0.1.7,<0.2.0",
  "wcwidth>=0.6.0,<0.7.0"
]
dynamic = ["version"]

[project.urls]
# ref: <https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels>
"Changelog" = "https://github.com/liblaf/strictly-pretty/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/strictly-pretty/"
"Funding" = "https://github.com/liblaf/strictly-pretty?sponsor=1"
"Homepage" = "https://github.com/liblaf/strictly-pretty"
"Issue Tracker" = "https://github.com/liblaf/strictly-pretty/issues"
"Release Notes" = "https://github.com/liblaf/strictly-pretty/releases"
"Source Code" = "https://github.com/liblaf/strictly-pretty"

[dependency-groups]
dev = ["numpy>=2.4.3,<3.0.0"]
build = ["check-wheel-contents>=0.6,<0.7", "hatch>=1,<2", "twine>=6,<7"]
docs = ["liblaf-mkdocs-preset>=0.3,<0.4", "mkdocs>=1,<2"]
test = ["liblaf-pytest-preset>=0.1,<0.2", "pytest>=9,<10"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/liblaf/strictly_pretty/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
extends = ".config/linters/pyrightconfig.json"

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--hypothesis-explain",
  "--import-mode=importlib",
  "--showlocals"
]
consider_namespace_packages = true
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"

[tool.uv]
default-groups = "all"
